--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@
             <span class="ball"></span>
             <section class="fixed_flex">
                 <figure class="flex_content">
-                    <img src="/images/image1.jpg" alt="" loading="lazy" />
+                    <img src="images/image1.jpg" alt="" loading="lazy" />
                 </figure>
                 <figure class="flex_content">
-                    <img src="/images/image2.jpg" alt="" loading="lazy" />
+                    <img src="images/image2.jpg" alt="" loading="lazy" />
                 </figure>
                 <figure class="flex_content">
-                    <img src="/images/image3.jpg" alt="" loading="lazy" />
+                    <img src="images/image3.jpg" alt="" loading="lazy" />
                 </figure>
                 <figure class="flex_content">
-                    <img src="/images/image4.jpg" alt="" loading="lazy" />
+                    <img src="images/image4.jpg" alt="" loading="lazy" />
                 </figure>
             </section>
         </div>
