--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Classroom est un site web dédié à la création de plateformes d'apprentissage en ligne, facilitant l'accès aux cours et aux ressources pédagogiques. Rejoignez-nous pour transformer l'éducation à distance.">
     <meta name="keywords" content="Classroom, apprentissage en ligne, éducation à distance, cours en ligne, plateformes d'apprentissage, ressources pédagogiques, e-learning, enseignement en ligne, formation à distance">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="4PTaZfY0ocUIzbrRsE3PUAyvAN1kZm9cRf-oDITeWR8" />
 <meta property="og:title" content="Classroom - Plateformes d'Apprentissage en Ligne">
 <meta property="og:description" content="Classroom est un site web dédié à la création de plateformes d'apprentissage en ligne, facilitant l'accès aux cours et aux ressources pédagogiques. Rejoignez-nous pour transformer l'éducation à distance.">
 <meta property="og:type" content="website">
